tests/ui/traits/const-traits/specialization/issue-95187-same-trait-bound-different-constness.stderr
error[E0049]: associated function `bar` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/issue-95187-same-trait-bound-different-constness.rs:18:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Bar {
LL |     fn bar();
   |           - expected 0 const parameters

error[E0049]: associated function `bar` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/issue-95187-same-trait-bound-different-constness.rs:18:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Bar {
LL |     fn bar();
   |           - expected 0 const parameters
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0049]: associated function `baz` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/issue-95187-same-trait-bound-different-constness.rs:38:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Baz {
LL |     fn baz();
   |           - expected 0 const parameters

error[E0049]: associated function `baz` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/issue-95187-same-trait-bound-different-constness.rs:38:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Baz {
LL |     fn baz();
   |           - expected 0 const parameters
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0049`.
